extract methods and fix warnigns in recogniser